# bluesapphire

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/testgame/: CMakeLists.txt  main.cpp
include/: App.h  AppSettings.h  Component.h  GameObject.h  IModule.h  InputManager.h  LuaController.h  Mesh.h  MeshRenderer.h  ModuleManager.h  PhysicsModule.h  Scene.h  ScriptingModule.h
include/Physics/: BoxCollider.h  Collider.h  RigidBody.h
include/Renderer/: Camera.h  CameraModule.h  Shader.h  Skybox.h  TextureUtils.h
include/Utilities/: Logger.h
include/utils/: Logger.h
src/: App.cpp  InputManager.cpp  ModuleManager.cpp
src/Renderer/: Camera.cpp  Shader.cpp  Skybox.cpp  TextureUtils.cpp
src/Utilities/: Logger.cpp
src/shaders/: basic.fragment.glsl  basic.vertex.glsl  skybox.fragment.glsl  skybox.vertex.glsl
src/utils/: Logger.cpp
